styles.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}

:root {
    --clr1: #f4f4f4;
    --clr2: #403d5c;
    --clr3: #c8c5e6;
    --clr4: #b6b3d6;
}

body {
    font-family: 'Raleway', sans-serif;
    background-color: var(--clr1);
}

header {
    padding: 1rem;
    text-align: center;
}

header > #heading {
    font-size: 2rem;
    color: var(--clr2);
}

header > #meme-navmenu {
    margin: 1rem 0 1rem 0;
    padding-bottom: 0.5rem;
    overflow: auto;
    white-space: nowrap;
}

header > #meme-navmenu .sub_channel {
    display: inline-block;
    color: var(--clr2);
    font-weight: 600;
    font-size: 0.8rem;
    text-align: center;
    margin: 0.5em;
    border-radius: 2rem;
    padding: 0.5em 1em;
    background-color: var(--clr4);
    transition: background-color 200ms ease-in-out, color 200ms ease-in-out;
}

header > #meme-navmenu .sub_channel:hover {
    cursor: pointer;
    background-color: var(--clr2);
    color: var(--clr3);
}

header > #meme-navmenu .sub_channel.active {
    background-color: var(--clr2);
    color: var(--clr3);
}

main > .meme {
    width: 50%;
    max-width: 400px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

main #meme-title {
    font-size: 1rem;
    color: var(--clr2);
    font-weight: 600;
    background-color: var(--clr3);
    padding: 0.5rem;
}

main #meme-author {
    font-size: 1rem;
    color: var(--clr2);
    font-weight: 600;
    background-color: var(--clr3);
    padding: 0.5rem;
}

main #meme-img > img {
    width: 100%;
    background-size: cover;
}

main #meme-author::before {
    content: 'Author: ';
}

main > .next-meme {
    display: flex;
    justify-content: center;
    padding: 1rem;
}

main > .next-meme > #next-meme-btn {
    border: none;
    background-color: none;
    padding: 0.5em 1.5em;
    font-family: inherit;
    font-size: 1rem;
    color: var(--clr2);
    font-weight: 600;
    background-color: var(--clr3);
    border-radius: 2rem;
    transition: background-color 200ms ease-in-out, color 200ms ease-in-out;
}

main > .next-meme > #next-meme-btn:hover {
    cursor: pointer;
    background-color: var(--clr2);
    color: var(--clr3);
}



@media (max-width: 700px) {
    main > .meme {
        width: 60%;
        max-width: 700px;
    }
}

@media (max-width: 500px) {
    main > .meme {
        width: 70%;
        max-width: 500px;
    }
}

@media (max-width: 400px) {
    main > .meme {
        width: 100%;
    }

    header > #heading {
        font-size: 1.5rem;
    }

    main #meme-title {
        font-size: 0.8rem;
    }

    main #meme-author {
        font-size: 0.8rem;
    }

    main > .next-meme > #next-meme-btn {
        font-size: 0.8rem;
    }
}

